fix root height width overflow

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -24,4 +24,11 @@ body {
   /* remove only from page. */
 }
 
+#root {
+  /* box-sizing: border-box; */
+  height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 /*  */
